--- a/home.html
+++ b/home.html
@@ -271,15 +271,9 @@
             </div>
         </div>
 
-        !--- video modal by April-->
-            
-        <h2>Media<span class='hide-767-inline'>&nbsp;</span><br class="show-767"></h2>
-        <div class="reveal contact-modal" id="exampleModal2" data-reveal>
-
-                <iframe src="https://player.vimeo.com/video/326252222" width="540" height="260" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                <button class="close-button trans2" data-close aria-label="Close modal" type="button"></button>
-            </div>
-            <!--one stop shop-->
+        <!-- video modal by April-->
+        <h2>Media</h2>
+        <div class="contact" data-open="exampleModal2">Media</div>            <!--one stop shop-->
         <div class="product-tiles master">
             <div class="background"></div>
             <div class="row inner">
